syntax = "proto3";

package video;

option go_package = "./pb";

service VideoRpc {
    rpc GetVideoListByUserId(GetVideoListByUserIdRequest) returns (GetVideoListByUserIdResponse) {}
    rpc VideoFeed(VideoFeedRequest) returns (VideoFeedResponse) {}
    rpc PublishVideo(PublishVideoRequest) returns (PublishVideoResponse) {}
    rpc GetUserVideoCount(GetUserVideoCountRequest) returns (GetUserVideoCountResponse) {}
    rpc GetVideoListInfo(GetVideoListInfoRequest) returns (GetVideoListInfoResponse) {}
    rpc GetAuthorId(GetAuthorIdRequest) returns (GetAuthorIdResponse) {}
}

message GetAuthorIdRequest {
    int64 video_id = 1;
}

message GetAuthorIdResponse {
    int64 user_id = 1;
}

message GetVideoListInfoRequest {
    int64 user_id = 1;
    repeated int64 video_id_list = 2;
}

message GetVideoListInfoResponse {
    repeated Video video_list = 1;
}

message GetUserVideoCountRequest {
    int64 user_id = 1;
}

message GetUserVideoCountResponse {
    int64 count = 1;
}

message PublishVideoRequest {
    int64 author_id = 1;
    string title = 2;
    string play_url = 3;
    string cover_url = 4;
}

message PublishVideoResponse {

}


message VideoFeedRequest {
    bool is_login = 1;
    int64 user_id = 2;
    int64 latest_time = 3;
}

message VideoFeedResponse {
    int64 next_time = 1;
    repeated Video video_list = 2;
}

message User {
    int64 id = 1;
    string username = 2;
    int64 follow_count = 3;
    int64 follower_count = 4;
    bool is_follow = 5;
    string avatar = 6;
    string background_image = 7;
    string signature = 8;
    int64 total_favorited = 9;
    int64 work_count = 10;
    int64 favorite_count = 11;
}


message Video {
    int64 id = 1;
    User user = 2;
    string play_url = 3;
    string cover_url = 4;
    int64 favorite_count = 5;
    int64 comment_count = 6;
    bool is_favorite = 7;
    string title = 8;
}

message GetVideoListByUserIdRequest {
    int64 user_id = 1;
    int64 to_user_id = 2;
}

message GetVideoListByUserIdResponse {
    repeated Video video_list = 1;
}



